--- a/tweets-cards/package.json
+++ b/tweets-cards/package.json
@@ -2,7 +2,7 @@
   "name": "tweets-cards",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://mariapetrukhnova.github.io/goit-tech-skills-test",
+  "homepage": "https://mariapetrukhnova.github.io/goit-techSkills-test",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
